# xcross

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/models/: metadata.json  xcross_shot.joblib  xcross_success.joblib  xcrossot_shot.joblib  xcrossot_success.joblib
artifacts/reports/metrics/: ablation_blocks_delta_shot.csv  ablation_blocks_delta_success.csv  ablation_blocks_shot.csv  ablation_blocks_success.csv  ablation_shot.csv  ablation_success.csv  comparison.csv  comparison_tabpfn.csv  importance_xcross_shot.csv  importance_xcross_success.csv  importance_xcrossot_shot.csv  (+20 more)
docs/: README.md  annotation.md  data.md  metrics.md  model-evolution.md  paper-comparison.md
docs/figures/: README.md
papers/: README.md
scripts/: run_pipeline_lightning.py  run_report_only_lightning.py  run_tabpfn_importance_lightning.py  run_tabpfn_lightning.py  tabpfn_importance.py
tests/: test_dataset.py  test_evaluate.py  test_extract.py  test_features.py  test_meta.py  test_selection.py
xcross/: config.py
xcross/data/: build.py  extract.py  io.py  meta.py
xcross/features/: assemble.py  build.py  clearance.py  counts.py  coverage.py  entropy.py  events.py  flight.py  frames.py  geometry.py  goalkeeper.py  grid.py  marking.py  pitch_control.py  pockets.py  pressure.py  shape.py  spatial.py  support.py  swing.py  temporal.py
xcross/model/: ablation.py  compare.py  comparison_figures.py  dataset.py  estimators.py  evaluate.py  export.py  figures.py  report.py  robustness.py  selection.py  tabpfn_oof.py  train.py
